<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mr.rohmani.diadiasempurna.Settings">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:text="@string/setting_screen"/>
        <Switch
            android:id="@+id/switch_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="56dp"
            android:layout_gravity="right"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/setting_mode"/>
        <Switch
            android:id="@+id/switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="56dp"
            android:layout_gravity="right"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/setting_size"/>
        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="right"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foreground="?attr/selectableItemBackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:text="@string/setting_warna"/>
        <Spinner
            android:id="@+id/spinner_warna"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="right"/>
    </android.support.v7.widget.CardView>

</LinearLayout>
